--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="manifest" href="/manifest.json">
     <script src="js/sha.js"></script>
     <script src="/js/index.js"></script>
     <script type="module">
@@ -8,7 +9,7 @@
         QrScanner.WORKER_PATH = '/js/qr-scanner-worker.min.js';
         var scanner;
     QrScanner.hasCamera().then(function (has){
-        if(has || true){
+        if(has){
             var back = document.getElementById('totp-background');
             var div = document.createElement('div');
             div.classList.add('topt');
@@ -86,6 +87,10 @@
             background-color: rgb(75, 75, 75);
         }
     </style>
+    <meta name="theme-color" content="#444444">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head> 
 <body>
     <div class="totp-background" id="totp-background">
