--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -4,51 +4,59 @@
     <link rel="manifest" href="/manifest.json">
     <script src="js/sha.js"></script>
     <script src="/js/index.js"></script>
-    <script type="module">
-        import QrScanner from '/js/qr-scanner.min.js';
-        QrScanner.WORKER_PATH = '/js/qr-scanner-worker.min.js';
-        var scanner;
-    QrScanner.hasCamera().then(function (has){
-        if(has){
-            var back = document.getElementById('totp-background');
-            var div = document.createElement('div');
-            div.classList.add('topt');
-            let btn = document.createElement('button');
-            btn.classList.add('btn');
-            btn.classList.add('btn-primary');
-            btn.style.width = '100%';
-            btn.innerText="Scan"
+    <script src="/js/html5-qrcode.min.js"></script>
+    <script src="/js/qrcode.js"></script>
+    <script>
+        Html5Qrcode.getCameras().then(cameras => {
+            if (cameras && cameras.length) {
+                //device has a camera -> add scan btn
+                var back = document.getElementById('totp-background');
+                var div = document.createElement('div');
+                div.classList.add('topt');
+                let btn = document.createElement('button');
+                btn.classList.add('btn');
+                btn.classList.add('btn-primary');
+                btn.style.width = '49%';
+                btn.innerText="Scan"
 
-            btn.addEventListener('click', function(){
-                var video = document.createElement('video');
-                document.body.appendChild(video);
-                btn.disabled = true;
-                scanner = new QrScanner(video, function (res){
-                    addUrl(res);
-                    scanner = null;
-                    btn.disabled = false;
-                    video.remove();
+                btn.addEventListener('click', function(){
+                    //alert(sel.value);
+                    let cameraId = sel.value;
+                    let html5QrCode = new Html5Qrcode("viewfinder");
+                    html5QrCode.start(
+                    cameraId,
+                    {
+                        fps: 10,
+                        qrbox: 250
+                    },
+                    qrCodeMessage => {
+                        addUrl(qrCodeMessage);
+                        html5QrCode.stop();
+                    },
+                    errorMessage => {
+                    })
+                    .catch(err => {
+                        alert(err);
+                    });
                 });
-                scanner.start();
-            });
 
-            div.appendChild(btn);
-            back.appendChild(div);
-        }
-    });
+                let sel = document.createElement('select');
+                sel.classList.add('form-control');
+                sel.style.width="49%";
+                sel.style.marginRight="1%";
+                sel.style.float="left";
+                for(var i=0; i < cameras.length; i++){
+                    var opt = document.createElement('option');
+                    opt.innerText = cameras[i].label;
+                    opt.value = cameras[i].id;
+                    sel.appendChild(opt);
+                }
 
-    // remove elm
-    Element.prototype.remove = function() {
-        this.parentElement.removeChild(this);
-    }
-    NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
-        for(var i = this.length - 1; i >= 0; i--) {
-            if(this[i] && this[i].parentElement) {
-                this[i].parentElement.removeChild(this[i]);
+                div.appendChild(sel);
+                div.appendChild(btn);
+                back.appendChild(div);
             }
-        }
-    }
-
+        }).catch(err => {});
     </script>
     <style>
         body{
@@ -86,6 +94,13 @@
         .clicky:active{
             background-color: rgb(75, 75, 75);
         }
+        .icon{
+            width: 3em;
+            height: 3em;
+            float: right;
+            padding-top: 1em;
+            cursor: pointer;
+        }
     </style>
     <meta name="theme-color" content="#444444">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -93,6 +108,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head> 
 <body>
+    
     <div class="totp-background" id="totp-background">
         <div id="totp-wrapper">
             <h1 style="color: #eeeeee; padding-left: 5px;">Tokens</h1>
@@ -103,5 +119,6 @@
                 <input id="url" style="width: calc(99% - 5em);float:left; margin-right: 1%;" type="text" class="form-control" placeholder="otpauth://totp/Example:alice@google.com?secret=JBSWY3DPEHPK3PXP&issuer=Example"></input><button class="btn btn-success" style="width: 5em;" onclick="addBtn()">Add</button>
         </div>
     </div>
+    <div id='viewfinder' class="viewfinder"></div>
 </body>
 </html>
