--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <script src="js/sha.js"></script>
-    <script src="/js/index.js"></script>
-    <script src="/js/html5-qrcode.min.js"></script>
-    <script src="/js/qrcode.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/html5-qrcode.min.js"></script>
+    <script src="js/qrcode.js"></script>
     <script>
         Html5Qrcode.getCameras().then(cameras => {
             if (cameras && cameras.length) {
